--- a/src/global.scss
+++ b/src/global.scss
@@ -1,12 +1,20 @@
 /* Write your global styles here, in PostCSS syntax */
 
-@import '@fontsource/fira-mono';
+@import "@fontsource/bebas-neue";
+@import "@fontsource/saira-semi-condensed";
 
 @tailwind base;
 
-:root {
-	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-	--font-mono: "SF Mono", "Monaco", "Inconsolata", "Fira Mono", "Droid Sans Mono", "Source Code Pro", monospace;
+:root,.normal-font {
+	font-family: "Saira Semi Condensed"; 
+	font-weight: 300;
+}
+.header-font {
+	font-family: "Bebas Neue";
+}
+
+body {
+	background: #330033;
 }
 
 
