--- a/src/assets/style/poster-content.scss
+++ b/src/assets/style/poster-content.scss
@@ -7,11 +7,19 @@ $color: white !default;
   padding: 2rem 0;
   text-align: center;
   text-decoration: underline;
-  text-decoration-color: #ea1c24;
+  text-decoration-color: $color;
   text-decoration-thickness: $underline-size;
   text-decoration-skip-ink: none;
   text-decoration-skip: auto;
   text-underline-offset: 5px;
+}
+
+.title {
+  color: $color;
+  font-size: 30pt;
+  font-weight: bold;
+  text-align: center;
+  padding: 2rem;
 }
 
 .section {
@@ -29,33 +37,48 @@ $color: white !default;
     }
   }
 
-  &__content {
-    table {
-      width: 100%;
+  table {
+    width: 100%;
 
-      th {
-        font-size: 15pt;
-        font-weight: bold;
-      }
-
-      th, td {
-        padding: 1rem;
-        border: $color 2px solid;
-      }
-
-      td:nth-child(1) {
-        text-align: center;
-      }
+    th {
+      font-size: 15pt;
+      font-weight: bold;
     }
+
+    th, td {
+      padding: 1rem;
+      border: $color 2px solid;
+    }
+
+    td:nth-child(1) {
+      text-align: center;
+    }
+  }
+  p {
+    padding-top: 1rem;
+    p:nth-child(1) {
+      padding-top: 0;
+    }
+  }
+
+  h2 {
+    font-weight: bold;
   }
 
   & ul {
     padding: 1rem 2rem;
+    li {
+      list-style: disc;
+    }
   }
 
   img {
     display: block;
     width: 15rem;
     margin: 0 auto;
+
+    &.right {
+      float: right;
+    }
   }
 }
