--- a/src/global.scss
+++ b/src/global.scss
@@ -19,8 +19,10 @@
 
 body {
 	background: #330033;
-	overflow-x: none;
+	overflow-x: hidden;
+	min-height: 100vh;
 }
+
 
 a {
 	text-decoration: none;
