--- a/src/assets/style/poster-content.scss
+++ b/src/assets/style/poster-content.scss
@@ -1,132 +1,100 @@
 $color: white !default;
 
 @mixin title($font-size, $underline-size: 0.5rem, $font-weight: bold) {
-  font-weight: $font-weight;
-  font-size: $font-size;
-  position: relative;
-  padding: 2rem 0;
-  text-align: center;
-  text-decoration: underline;
-  text-decoration-color: $color;
-  text-decoration-thickness: $underline-size;
-  text-decoration-skip-ink: none;
-  text-decoration-skip: auto;
-  text-underline-offset: 5px;
+	font-weight: $font-weight;
+	font-size: $font-size;
+	position: relative;
+	padding: 2rem 0;
+	text-align: center;
+	text-decoration: underline;
+	text-decoration-color: $color;
+	text-decoration-thickness: $underline-size;
+	text-decoration-skip-ink: none;
+	text-decoration-skip: auto;
+	text-underline-offset: 5px;
 }
 
 .title {
-  color: $color;
-  font-size: 30pt;
-  font-weight: bold;
-  text-align: center;
-  padding: 2rem;
+	color: $color;
+	font-size: 30pt;
+	font-weight: bold;
+	text-align: center;
+	padding: 2rem;
 }
 
 .section {
-  color: white;
-  padding: 0 1rem 2rem;
-  font-size: 15pt;
+	color: white;
+	padding: 0 1rem 2rem;
+	font-size: 15pt;
 
-  &__title {
-    @include title(22pt);
-  }
+	&__title {
+		@include title(22pt);
+	}
 
-  &--sub {
-    &__title {
-      @include title(20pt, 0.3rem, normal);
-    }
-  }
+	&--sub {
+		&__title {
+			@include title(20pt, 0.3rem, normal);
+		}
+	}
 
-  table {
-    width: 100%;
+	table {
+		width: 100%;
 
-    th {
-      font-size: 15pt;
-      font-weight: bold;
-    }
+		th {
+			font-size: 15pt;
+			font-weight: bold;
+		}
 
-    th, td {
-      padding: 1rem;
-      border: $color 2px solid;
-    }
+		th,
+		td {
+			padding: 1rem;
+			border: $color 2px solid;
+		}
 
-    td:nth-child(1) {
-      text-align: center;
-    }
-  }
-  p {
-    padding-top: 1rem;
-    p:nth-child(1) {
-      padding-top: 0;
-    }
-  }
+		td:nth-child(1) {
+			text-align: center;
+		}
+	}
+	p {
+		padding-top: 1rem;
+		p:nth-child(1) {
+			padding-top: 0;
+		}
+	}
 
-  h2 {
-    font-weight: bold;
-    font-size: 1.5rem;
-  }
+	h2 {
+		font-weight: bold;
+		font-size: 1.5rem;
+	}
 
-  & ul {
-    padding: 1rem 0 1rem 2rem;
-    li {
-      list-style: none;
-      &:before {
-        display: inline-block;
-        content: "-";
-        width: 1em;
-        margin-left: -1em;
-      }
-    }
-    &.dash {
-      margin-left: 0;
-      padding-left: 1em;
-    }
-  }
-  img {
-    display: block;
-    width: 15rem;
-    margin: 0 auto;
-    &.large {
-      width: 50vw;
-      @media (max-width: 600px) {
-        width: 100%;
-      }
-    }
-    &.right {
-      float: right;
-    }
-  }
-  .intrinsic-container {
-    position: relative;
-    height: 0;
-    overflow: hidden;
-    width: 50%;
-    margin: 0 auto;
-    @media (max-width: 600px) {
-      width: 100%;
-    }
-
-    /* 16x9 Aspect Ratio */
-    &.r16x9 {
-      padding-bottom: 28.125%;
-      @media (max-width: 600px) {
-        padding-bottom: 56.25%;
-      }
-    }
-    
-    /* 4x3 Aspect Ratio */
-    &.r4x3 {
-      padding-bottom: 37.5%;
-      @media (max-width: 600px) {
-        padding-bottom: 75%;
-      }
-    }
-    iframe {
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-    }
-  }
+	& ul {
+		padding: 1rem 0 1rem 2rem;
+		li {
+			list-style: none;
+			&:before {
+				display: inline-block;
+				content: '-';
+				width: 1em;
+				margin-left: -1em;
+			}
+		}
+		&.dash {
+			margin-left: 0;
+			padding-left: 1em;
+		}
+	}
+	img {
+		display: block;
+		width: 15rem;
+		margin: 0 auto;
+		&.large {
+			width: 50vw;
+			@media (max-width: 600px) {
+				width: 100%;
+			}
+		}
+		&.right {
+			float: right;
+		}
+	}
 }
